--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
+  },
+  "dependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
