--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend-project-lvl2",
   "version": "1.0.0",
   "description": "Hexlet Project 2 - Temirlan A.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,14 +16,13 @@
     "url": "https://github.com/temir-cs/frontend-project-lvl2/issues"
   },
   "homepage": "https://github.com/temir-cs/frontend-project-lvl2#readme",
-  "devDependencies": {
-    "commander": "^6.0.0"
-  },
+  "devDependencies": {},
   "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
   "dependencies": {
+    "commander": "^6.0.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0"
