--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^6.0.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "lodash": "^4.17.20"
   }
 }
