--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,11 @@ env:
 
 extends:
   - airbnb-base
+  - plugin:jest/recommended
 
 rules:
   no-console: 0
   import/extensions: 0
+
+plugins:
+  - jest
