--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,5 +29,7 @@ jobs:
       # Add environment variables
       env:
         CI: true
-    - name: Run 'make lint'
+    - name: Run linter
       run: make lint
+    - name: Run tests
+      run: make test
