--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hexlet Project 2 - Temirlan A.",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,8 +16,16 @@
     "url": "https://github.com/temir-cs/frontend-project-lvl2/issues"
   },
   "homepage": "https://github.com/temir-cs/frontend-project-lvl2#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "@jest/globals": "^26.4.2",
+    "eslint-plugin-jest": "^23.20.0",
+    "jest": "^26.4.2"
+  },
   "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
