--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,6 +30,13 @@ jobs:
       env:
         CI: true
     - name: Run linter
+      # Run Eslint check on startup
       run: make lint
-    - name: Run tests
-      run: make test
+    - name: Test & publish code coverage
+      uses: paambaati/codeclimate-action@v2.6.0
+      # User CodeClimate secret key
+      env:
+        CC_TEST_REPORTED_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: make test-coverage
+        debug: true
