--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "commander": "^6.0.0",
+    "ini": "^1.3.5",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20"
   }
